<project>
  <modelVersion>4.0.0</modelVersion>
 
  <groupId>com.qrypt</groupId>
  <artifactId>random-provider-project</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  
  <modules>
    <module>random-provider</module>
  </modules>
  

  <dependencies>
    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-inline</artifactId>
        <version>5.2.0</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>5.12.0</version>
        <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.11.0</version>
    </dependency>
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
          <version>2.24.0</version>
      </dependency>
      <!-- If you want to use Log4J2 XML Configuration-->
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-1.2-api</artifactId>
          <version>2.24.0</version>
      </dependency>
  </dependencies>

  <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.13.0</version> <!-- Use the latest version -->
            <configuration>
                <source>11</source>
                <target>11</target>
<!--                <release>11</release> &lt;!&ndash; Optional, ensures compatibility &ndash;&gt;-->
                <compilerArgs>
                    <arg>--add-exports</arg>
                    <arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
                    <!-- include additional args here -->
                </compilerArgs>
            </configuration>
        </plugin>    
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.6.0</version>
            <configuration>
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
            </configuration>
            <executions>
                <execution>
                    <id>make-assembly</id>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-install-plugin</artifactId>
            <version>3.0.0-M1</version>
            <executions>
                <execution>
                    <goals>
                        <goal>install</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M9</version> <!-- Use the latest version -->
<!--            <configuration>-->
<!--                <argLine>-Dnet.bytebuddy.experimental=true</argLine>-->
<!--            </configuration>-->
            <configuration>
                <!-- Specify the custom java.security file -->
                <systemPropertyVariables>
                    <java.security.properties>${project.basedir}/src/test/resources/custom.java.security</java.security.properties>
                </systemPropertyVariables>
            </configuration>
        </plugin>                
    </plugins>
</build>

</project>